added new backgroun-image, added reset, ifwin functions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Game Guess</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
-            <h1 id="headerOne">This the Guessing Game</h1>
+            <h1 id="headerOne">Marvel Heros Guessing Game</h1>
     </header>
     
     <div class="body-content">
@@ -27,6 +28,6 @@
             <h1 id="messageBanner"></h1>
         </div>
     </div>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/game.js"></script>
 </body>
 </html>
