added a new game button and fixed the bootstrap link to point to v4.1.3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Game Guess</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -27,6 +27,11 @@
             <p id="myArray"></p>
             <h1 id="messageBanner"></h1>
         </div>
+    </div>
+    <div class="row" id="newGameButton">
+        <div class="col-4">test</div>
+        <button class="btn-primary col-4">New Game</button>
+        <div class="col-4">test</div>
     </div>
     <script src="./assets/js/game.js"></script>
 </body>
