added new game button functionality and fixed width-max-content to make sure border box contains the array

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
             <h1 id="messageBanner"></h1>
         </div>
     </div>
-    <div class="row" id="newGameButton">
-        <div class="col-4">test</div>
-        <button class="btn-primary col-4">New Game</button>
-        <div class="col-4">test</div>
+    <div class="row mt-4" id="newGameButtonRow">
+        <button id="newGameButton" class="btn-primary offset-5 col-2 offset-5 rounded-circle">New Game</button>
     </div>
     <script src="./assets/js/game.js"></script>
 </body>
